@@ -1,6 +1,7 @@
 SimpleComplex/Locale 1.x, 2017-07-01
 ------------------------------------
 - CLI interface for locale text.
+- Export locale text from sources, as JSON to file.
 
 SimpleComplex/Locale 1.x, 2017-06-30
 ------------------------------------
